added readme and cleaned code

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,40 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PearsonRResult(statistic=-0.35938432806508147, pvalue=0.3819275211735025)"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "from scipy.stats import pearsonr\n",
-    "from collections import OrderedDict\n",
-    "\n",
-    "\n",
-    "#create DataFrame\n",
-    "df = pd.DataFrame({'points': [25, 12, 15, 14, 19, 23, 25, 29],\n",
-    "                   'assists': [5, 7, 7, 9, 12, 9, 9, 4],\n",
-    "                   'rebounds': [11, 8, 10, 6, 6, 5, 9, 12]})\n",
-    "\n",
-    "#calculate p-value of correlation coefficient between points and assists\n",
-    "pearsonr(df['points'], df['assists'])\n",
-    "\n",
-    "# (-0.359384, 0.38192)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -145,9 +112,7 @@
     "\n",
     "highest = sorted(highest.items(), key=lambda x: x[1], reverse=True)\n",
     "for k, v in highest:\n",
-    "    print(k, v, sep=':\\t')\n",
-    "    # print('\\n')\n",
-    "# print(highest.split, sep='\\n')"
+    "    print(k, v, sep=':\\t')\n"
    ]
   }
  ],
