--- a/main.ipynb
+++ b/main.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,6 +104,66 @@
     "        data = fin.read().splitlines(True)\n",
     "    with open(f, 'w') as fout:\n",
     "        fout.writelines(data[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read in the two CSV files\n",
+    "df1 = pd.read_csv(\"2022-s.csv\")\n",
+    "df2 = pd.read_csv(\"2022-a.csv\")\n",
+    "\n",
+    "# Merge the two dataframes on a common column\n",
+    "merged_df = df2.join(df1.set_index('Date'), on='Date')\n",
+    "\n",
+    "# Save the merged dataframe to a new CSV file\n",
+    "merged_df.to_csv(\"2022-fb.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('2022-m.csv', 'r') as fin:\n",
+    "    data = fin.read().splitlines(True)\n",
+    "    # get the number of times each date was mentioned\n",
+    "    dates = {}\n",
+    "    for date in data:\n",
+    "        date = date.strip()\n",
+    "        if date in dates:\n",
+    "            dates[date] += 1\n",
+    "        else:\n",
+    "            dates[date] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Read in the two CSV files\n",
+    "df1 = pd.read_csv(\"2022-fb.csv\")\n",
+    "df2 = pd.read_csv(\"2022-jd.csv\")\n",
+    "\n",
+    "# Merge the two dataframes on a common column\n",
+    "merged_df = df2.join(df1.set_index('Date'), on='Date')\n",
+    "\n",
+    "# add the number of times each date was mentioned to its row\n",
+    "merged_df['scrobbles'] = merged_df['Date'].map(dates)\n",
+    "\n",
+    "# Save the merged dataframe to a new CSV file\n",
+    "merged_df.to_csv(\"2022.csv\", index=False)"
    ]
   }
  ],
