done w data cleaning n merging, time to analyze

--- a/main.ipynb
+++ b/main.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,6 +161,26 @@
     "\n",
     "# add the number of times each date was mentioned to its row\n",
     "merged_df['scrobbles'] = merged_df['Date'].map(dates)\n",
+    "\n",
+    "# Save the merged dataframe to a new CSV file\n",
+    "merged_df.to_csv(\"2022.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read in the two CSV files\n",
+    "df1 = pd.read_csv(\"2022.csv\")\n",
+    "df2 = pd.read_csv(\"sleepStress.csv\")\n",
+    "\n",
+    "# Merge the two dataframes on a common column\n",
+    "merged_df = df1.join(df2.set_index('Date'), on='Date')\n",
+    "\n",
     "\n",
     "# Save the merged dataframe to a new CSV file\n",
     "merged_df.to_csv(\"2022.csv\", index=False)"
