--- a/README
+++ b/README
@@ -3,3 +3,4 @@
 ## TODO
 
 - [ ] get the avg score for each day and do some analysis on how it differs from my overall score
+- [ ] more correlation analysis (sleep, music, etc)
