some correlational analysis

--- a/README
+++ b/README
@@ -3,4 +3,11 @@
 ## TODO
 
 - [ ] get the avg score for each day and do some analysis on how it differs from my overall score
-- [ ] more correlation analysis (sleep, music, etc)
+- [X] more correlation analysis (sleep, music, etc)
+
+## Findings
+
+- My overall day score is strongly correlated with my happiness score(.89), the big Q is what is my criteria for happiness? Honestly didn't see that happening
+- My sleep duration is NEGATIVELY correlated(-.17) with my overall day score, which is very interesting. Can't confirm that the data is not skewed yet
+- So I decided to analyze my sleep duration correlations, turns out my it's slightly positively correlated with my 'living in the moment' score(.19), excitement(.17), stress(.12), energy(.086). Nothing strong but yeah
+- Interesting, so my energy score has a slight positive correlation with minutes asleep and sleep score (.24). And it also has a .6 correlation with health and .53 with overall score.🤔
