--- a/main.ipynb
+++ b/main.ipynb
@@ -2,46 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correlation coefficient between energy and other columns: \n",
+      "Correlation coefficient between overall and other columns: \n",
       "\n",
-      "health:\t0.5967354745951695\n",
-      "excitement:\t0.5551438239214108\n",
-      "overall:\t0.5261207810259757\n",
-      "happiness:\t0.5122837330771041\n",
-      "positivity:\t0.49115055863837925\n",
-      "purpose:\t0.4430439837013459\n",
-      "moment:\t0.42297954122249526\n",
-      "sociability:\t0.41106973051669865\n",
-      "sleep score:\t0.2442105123534386\n",
-      "Minutes Asleep:\t0.2351638849373829\n",
-      "integrity:\t0.22049047112746473\n",
-      "Time in Bed:\t0.2153057487148139\n",
-      "Minutes REM Sleep:\t0.1224890481480565\n",
-      "Minutes Deep Sleep:\t0.08996315680582072\n",
-      "sleep duration score:\t0.0868760544803273\n",
-      "Distance:\t0.08340820155849758\n",
-      "Steps:\t0.08047801037051411\n",
-      "Calories Burned:\t0.058589522251430895\n",
-      "Floors:\t0.05386557976530006\n",
-      "stress score:\t0.049712848247205454\n",
-      "Minutes Very Active:\t0.030690360387101018\n",
-      "Minutes Light Sleep:\t0.029141931219186193\n",
-      "Activity Calories:\t0.020875112392800762\n",
-      "Minutes Awake:\t0.01723274430478346\n",
-      "scrobbles:\t0.01578276630189171\n",
-      "Minutes Fairly Active:\t0.011214298532673103\n",
-      "Number of Awakenings:\t0.00905977010540489\n",
-      "Minutes Lightly Active:\t0.008156612418840263\n",
-      "Minutes Sedentary:\t-0.04497172518227478\n",
-      "productivity:\t-0.008290914625448408\n",
-      "uniqueness:\t-0.007496242373561357\n"
+      "excitement:\t1.0\n",
+      "moment:\t0.9853990276561037\n",
+      "stimulation:\t0.9114217401621496\n",
+      "integrity:\t0.7841113141278143\n",
+      "uniqueness:\t0.764251789479224\n",
+      "happiness:\t0.7502998962257649\n",
+      "positivity:\t0.7473778989541394\n",
+      "health:\t0.7031296287047868\n",
+      "sociability:\t0.587018065632474\n",
+      "engagement:\t0.5815738790745991\n",
+      "purpose:\t0.5620043038193793\n",
+      "energy:\t0.4973089816533718\n",
+      "productivity:\t0.30944955380389677\n",
+      "readiness:\t0.05803213632249073\n"
      ]
     }
    ],
@@ -50,13 +33,13 @@
     "# from scipy.stats import pearsonr\n",
     "\n",
     "#create DataFrame\n",
-    "df = pd.read_csv('data/2022.csv')\n",
+    "df = pd.read_csv('data/2023-raw.csv', sep=';')\n",
     "highest = {}\n",
     "\n",
     "cols = df.columns\n",
-    "cols = cols.drop('date').drop('bottles drank').drop('times peed').drop('time slept').drop('time awaked').drop('total sleep time').drop('effectiveness (Am I SPENDING the RIGHT TIME)').drop('Sleep Min').drop('Sleep Hr').drop('Awake Hr').drop('% of planned output').drop(\"Time slept\").drop(\"Time woken\")\n",
+    "cols = cols.drop('date').drop('peak').drop('unique').drop('sleep').drop('wake')#.drop('bottles drank').drop('times peed').drop('time slept').drop('time awaked').drop('total sleep time').drop('effectiveness (Am I SPENDING the RIGHT TIME)').drop('Sleep Min').drop('Sleep Hr').drop('Awake Hr').drop('% of planned output').drop(\"Time slept\").drop(\"Time woken\")\n",
     "\n",
-    "index =4\n",
+    "index = 0\n",
     "# calculate correlation coefficient between all cols with overall score\n",
     "for j in range(0, len(cols)):\n",
     "    if j == index or j == len(cols) + index:\n",
@@ -585,7 +568,6 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "\n",
     "#create DataFrame\n",
     "df = pd.read_csv('data/2022.csv')\n",
     "highest = {}\n",
@@ -750,7 +732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
